[tool.poetry]
name = "pyanthias"
version = "0.2.1"
description = "interact with Anthias (Screenly) API"
authors = ["Jack Grahl <jack.grahl@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "anthias", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.33.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
